Custom/Webhook/admission-webhook/kubernetes/admissionWebhookConfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "pod-validator.default"
webhooks:
- name: "pod-validator.default.svc.cluster.local"
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE", "UPDATE"]
    resources:   ["pods"]
    scope:       "Namespaced"
  clientConfig:
    service:
      namespace: "default"
      name: "pod-validator"
      path: "/validate"
      port: 443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURpakNDQW5LZ0F3SUJBZ0lVRkFpajdETTBzbHBqWlBQaUFickV5dlQ2Smlrd0RRWUpLb1pJaHZjTkFRRUwKQlFBd01qRXdNQzRHQTFVRUF3d25jRzlrTFhaaGJHbGtZWFJ2Y2k1a1pXWmhkV3gwTG5OMll5NWpiSFZ6ZEdWeQpMbXh2WTJGc01CNFhEVEkyTURJd056RTBOVGcwTjFvWERUSTNNREl3TnpFME5UZzBOMW93TWpFd01DNEdBMVVFCkF3d25jRzlrTFhaaGJHbGtZWFJ2Y2k1a1pXWmhkV3gwTG5OMll5NWpiSFZ6ZEdWeUxteHZZMkZzTUlJQklqQU4KQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBcm10ZjlWZ2ZKYURYSW1SbjNjRWpySEJZa2hyZgptb1J5NFVVRXVjdU [...]
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 5
